# subtitle-engine

./: .gitignore  LICENSE  README.md  agent.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/subtitle_engine/: __init__.py  burner.py  captioner.py  cli.py  segmenter.py  srt_writer.py  transcriber.py  updater.py  utils.py
tests/: test_burner.py  test_captioner.py  test_cli.py  test_segmenter.py  test_srt_writer.py  test_transcriber.py  test_updater.py
