[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-engine"
version = "0.1.1"
description = "Generate SRT subtitles from audio/video files using WhisperX"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Leevi Puntanen"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
keywords = ["subtitles", "srt", "whisperx", "transcription", "asr"]
dependencies = [
    "typer>=0.12.0",
    "whisperx>=3.8.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
subeng = "subtitle_engine.cli:app"

[project.urls]
Homepage = "https://github.com/leevipun/subtitle-engine"
Issues = "https://github.com/leevipun/subtitle-engine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
